--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@heroicons/react": "^2.1.1",
 		"@material-tailwind/react": "^2.1.8",
 		"axios": "^1.6.5",
+		"bootstrap": "^5.3.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.21.1"
