--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 		"@material-tailwind/react": "^2.1.8",
 		"axios": "^1.6.5",
 		"bootstrap": "^5.3.2",
+		"headlessui": "^0.0.0",
+		"heroicons": "^2.1.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.21.1"
