--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@material-tailwind/react": "^2.1.8",
 		"axios": "^1.6.5",
 		"bootstrap": "^5.3.2",
+		"flowbite-react": "^0.7.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.21.1"
